cliente crud ok inicio serviço crud

--- a/src/app/cliente/cliente-form/cliente-form.component.html
+++ b/src/app/cliente/cliente-form/cliente-form.component.html
@@ -1,26 +1,29 @@
 <h1 class="mt-4">Clientes</h1>
 <ol class="breadcrumb mb-4">
-  <li class="breadcrumb-item active">Cadastro</li>
+  <li class="breadcrumb-item active">{{ cliente.id ? 'Edição' : 'Cadastro' }}</li>
 </ol>
 <div class="container">
-  <form>
-    <div class="row">
+  <form #clienteForm="ngForm" (ngSubmit)="save()">
+
+    <div class="row" *ngIf="cliente.id">
       <div class="col-md-4">
         <div class="form-group">
           <label for="id-cliente">Id</label>
-          <input type="text" id="id-cliente" class="form-control" disabled/>
+          <input type="text" id="id-cliente" class="form-control" [ngModel]="cliente.id" name="id" disabled/>
         </div>
       </div>
       <div class="col-md-4">
         <div class="form-group">
           <label for="data-cadatro">Data Cadastro</label>
-          <input type="text" id="data-cadatro" class="form-control" disabled/>
+          <input type="text" id="data-cadatro" class="form-control" [ngModel]="cliente.dataCadastro"
+                 name="dataCadastro" disabled/>
         </div>
       </div>
       <div class="col-md-4">
         <div class="form-group">
           <label for="data-atualizacao">Data Última Atualização</label>
-          <input type="text" id="data-atualizacao" class="form-control" disabled/>
+          <input type="text" id="data-atualizacao" class="form-control" [ngModel]="cliente.dataUltimaAtualizacao"
+                 name="dataUltimaAtualizacao" disabled/>
         </div>
       </div>
     </div> <!--row-->
@@ -28,13 +31,13 @@
       <div class="col-md-6">
         <div class="form-group">
           <label for="nome">Nome *</label>
-          <input type="text" id="nome" class="form-control" required="true"/>
+          <input type="text" id="nome" class="form-control" [(ngModel)]="cliente.nome" name="nome" required="true"/>
         </div>
       </div>
       <div class="col-md-6">
         <div class="form-group">
           <label for="cpf">Cpf *</label>
-          <input type="text" id="cpf" class="form-control" required="true"/>
+          <input type="text" id="cpf" class="form-control" [(ngModel)]="cliente.cpf" name="cpf" required="true"/>
         </div>
       </div>
     </div> <!--row-->
@@ -42,22 +45,48 @@
       <div class="col-md-6">
         <div class="form-group">
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="ativo1" value="true">
-            <label class="form-check-label" for="ativo1">Ativo</label>
+            <input class="form-check-input" type="radio" name="ativo" id="at1"
+                   [(ngModel)]="cliente.ativo" [value]="true">
+            <label class="form-check-label" for="at1">Ativo</label>
           </div>
           <div class="form-check form-check-inline">
-            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="ativo2" value="false">
-            <label class="form-check-label" for="ativo2">Inativo</label>
+            <input class="form-check-input" type="radio" name="ativo" id="at2"
+                   [(ngModel)]="cliente.ativo" [value]="false">
+            <label class="form-check-label" for="at2">Inativo</label>
           </div>
         </div>
       </div>
     </div> <!--row-->
     <div class="row">
-      <div class="col-md-2">
-        <button class="btn btn-primary">
-          <i class="fa fa-save"></i> Salvar Cliente
-        </button>
+      <div class="col-12">
+        <div class="form-group float-right">
+          <button class="btn btn-success" type="submit" *ngIf="!cliente.id">
+            <i class="fa fa-save"></i> Salvar
+          </button>
+
+          <button class="btn btn-primary" type="submit" *ngIf="cliente.id">
+            <i class="fa fa-sync-alt"></i> Atualizar
+          </button>
+
+          <button class="btn btn-warning ml-2" type="button" (click)="voltar()">
+            <i class=" fa fa-arrow-left"></i> Voltar
+          </button>
+        </div>
       </div>
     </div> <!--row-->
+
+    <div class="row">
+      <div class="col-md-12">
+        <div class="form-group">
+          <div class="alert alert-success" role="alert" *ngIf="success">
+            Cliente salvo com sucesso!
+          </div>
+          <div class="alert alert-danger" role="alert" *ngFor="let message of messages">
+            <span *ngIf="!message.success">{{ message.message }}</span>
+          </div>
+        </div>
+      </div>
+    </div> <!--row-->
+
   </form>
 </div>
