--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -23,7 +23,7 @@
         </a>
         <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-parent="#sidenavAccordion">
           <nav class="sb-sidenav-menu-nested nav">
-            <a class="nav-link" routerLink="/cliente-form">Cadastro</a>
+            <a class="nav-link" routerLink="/cliente-list">Listagem</a>
           </nav>
         </div>
         <div class="sb-sidenav-menu-heading">Relatórios</div>
